# MightyEngineVK

./: .clang-format  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  TODO  compile.bat  main.cc  main.cpp
core/: context.cc  context.h  engine.cc  engine.h  globals.h  init_vk.cc  utils.h  window.cc  window.h
core/shaders/: closesthit.rchit  closesthit.slang  common.glsl  miss.rmiss  raygen.rgen  shader.slang
core/vulkan/: command_pool.cc  command_pool.h  context.cc  context.h  debug_messenger.cc  debug_messenger.h  descriptor_pool.cc  descriptor_pool.h  device.cc  device.h  instance.cc  instance.h  physical_device.cc  physical_device.h  queue.cc  queue.h  queue_family.cc  queue_family.h  surface.cc  surface.h  swapchain.cc  swapchain.h  window_handle.cc  window_handle.h
temp_code/: context.cc  context.h  utils.h
